[project]
name = "mps-database-dashapp"
version = "0.0.1"
description = "Dash app for interacting with the MPS database"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cardiac", "mps", "electrophysiology", "database"]

[project.urls]
Homepage = "https://computationalphysiology.github.io/mps-database-dashapp"
Documentation = "https://computationalphysiology.github.io/mps-database-dashapp"
Source = "https://github.com/ComputationalPhysiology/mps-database-dashapp"
Tracker = "https://github.com/ComputationalPhysiology/mps-database-dashapp/issues"


[tool.pytest.ini_options]
addopts = [
   "--cov=app",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.bandit]
skips = ["B101"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
